--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     env:
       NODE_ENV: "ci"
@@ -18,11 +18,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Use latest Node.js
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
+          node-version: '20.x'
           cache: 'npm'
+      - name: clean cache
+        run: npm cache clean --force
 
       - name: Install dependencies
         run: npm ci
