--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,8 +23,14 @@ jobs:
         with:
           node-version: '20.x'
           cache: 'npm'
-      - name: clean cache
-        run: npm cache clean --force
+
+      - name: Check Node.js and npm versions
+        run: |
+          node --version
+          npm --version
+
+      - name: Clean npm cache
+        run: npm cache verify && npm cache clean --force
 
       - name: Install dependencies
         run: npm ci
