--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      - name: Install dependencies2
+        run: npm install
+
+      - name: Install Playwright
+        run: npm install playwright
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
