--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest  # Use Ubuntu for Docker, since Playwright Docker images are based on Ubuntu
 
     env:
       NODE_ENV: "ci"
@@ -18,33 +18,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Use Node.js 20
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          cache: 'npm'
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2  # Ensures Docker is set up properly for multi-platform support
 
-      - name: Check Node.js and npm versions
+      - name: Build and run Playwright Docker container
         run: |
-          node --version
-          npm --version
-
-      - name: Clean npm cache
-        run: npm cache verify && npm cache clean --force
-
-      - name: Install dependencies
-        run: npm ci
-      - name: Install dependencies2
-        run: npm install
-
-      - name: Install Playwright
-        run: npm install playwright
-
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-
-      - name: Run Tests (Cucumber + Playwright)
-        run: npm run test
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace mcr.microsoft.com/playwright:v1.20.0-focal npm ci  # Install dependencies inside Docker container
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace mcr.microsoft.com/playwright:v1.20.0-focal npm run test  # Run tests inside Docker container
 
       - name: Upload Test Results
         if: always()
