--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      
+      - name: Upgrade npm
+        run: npm install -g npm@latest
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
