--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
       with:
         node-version: lts/*
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --verbose
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run tests
