--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx cucumber-js",
+    "preTest": "npx cucumber-js --tags @preStep",
+    "test": "npx cucumber-js --tags \"not @preStep\"",
     "lint": "npx eslint . --fix"
   },
   "keywords": [],
